@@ -5,6 +5,7 @@ announcer-1.0 (not yet released) - branch 0.11 again
  resolved issues
  * #5774: No such table: subscriptions
  * #7759: Update Account Manager Announcer for new subscription system
+ * #7834: Emails are attempted to be sent even when there are no recipients
  * #7974: UnboundLocalError: local variable 'tid' referenced before assignment
           with announcements from AccountManager plugin
  * #7975: Subscription incorrectly uses CURRENT_TIMESTAMP on BIGINT column
